Content updation and directory cleanup

--- a/auditing-and-assurance.html
+++ b/auditing-and-assurance.html
@@ -27,50 +27,48 @@ maximum-scale=1.0, user-scalable=no" />
   margin-right: auto;"></a>
     </div>
     <div class="nav-container ">
-    <div class="nav-links">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Services</a>
-                <ul class="dropdown-1">
-                    <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a></li>
-                    <li><a href="auditing-and-assurance.html">Auditing & Assurance</a><ul class="dropdown-2">
-                        <li><a href="statutory-audit.html">Statutory Audit</a></li>
-                        <li><a href="#">Internal Audit</a></li>
-                    </ul></li>
-                    <li><a href="tax-and-regulatory.html">Tax & Regulatory</a>
-                        <ul class="dropdown-2">
-                            <li><a href="direct-tax.html">Direct Tax</a></li>
-                            <li><a href="indirect-tax.html">Indirect Tax</a></li>
+        <div class="nav-links">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Services</a>
+                    <ul class="dropdown-1">
+                        <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a></li>
+                        <li><a href="auditing-and-assurance.html">Auditing & Assurance</a><ul class="dropdown-2">
+                            <li><a href="statutory-audit.html">Statutory Audit</a></li>
+                            <li><a href="#">Internal Audit</a></li>
                         </ul></li>
-                    <li><a href="#">Company Secretarial</a></li>
-                    <li><a href="corporate-finance-debt-restructuring.html">Corporate Finance</a></li>
-                    <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Sectors</a></li>
-            <li><a href="#">Finsurety</a>
-                <ul class="dropdown-1">
-                    <li><a href="#">The Firm & Partners</a></li>
-                    <li><a href="#">Board of Advisors & Finsurety Team</a></li>
-                </ul></li>
-            <li><a href="#">News Letter & Articles
-            </a></li>
-            <li><a href="#">Contact Us</a></li>
-        </ul>
-    </div>
+                        <li><a href="tax-and-regulatory.html">Tax & Regulatory</a>
+                            <ul class="dropdown-2">
+                                <li><a href="direct-tax.html">Direct Tax</a></li>
+                                <li><a href="indirect-tax.html">Indirect Tax</a></li>
+                            </ul></li>
+                        <li><a href="#">Company Secretarial</a></li>
+                        <li><a href="corporate-finance-debt-restructuring.html">Corporate Finance</a></li>
+                        <li><a href="financial-accounting.html">Financial Accounting</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Sectors</a></li>
+                <li><a href="#">Finsurety</a>
+                    <ul class="dropdown-1">
+                        <li><a href="#">The Firm & Partners</a></li>
+                        <li><a href="#">Board of Advisors & Finsurety Team</a></li>
+                    </ul></li>
+                <li><a href="#">News Letter & Articles
+                </a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
     </div>
 </section>
 <div class="nav-ht-fix"></div>
-<div>
-    <div class="main-bg">
-        <div class="bg-tax-regulatory "></div>
-        <div class="centered main-text-heading">
-            Tax
-            And
-            Regulatory
-        </div>
+<div class="main-bg">
+    <div class="bg-auditing-assurance"></div>
+    <div class="centered main-text-heading">
+        Auditing &amp; Assurance
     </div>
 </div>
+
+
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
@@ -123,65 +121,50 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
         <div class="col-sm-9">
             <div class="body-text-2">
-                <h2>The Dynamic Nature of Tax Laws:
-                </h2>
-                <p>
-                    Indian tax laws and their regulation in an ever changing dynamic economy are a tough area to
-                    expertise in. Given the rapid transition of our growing economy, even tax policymakers are trying to
-                    cope up with the pace by making frequent and necessary changes to the tax laws, while India climbs
-                    up the ‘ease of doing business’ charts globally.
+                <p>When organizations think about audit and assurance, they often focus on assurance over the financial
+                    statements alone. However, assurance can be applied to all of the information that is used to
+                    manage, govern, transact with and invest in an organization. A corporate’s journey to success is
+                    governed by increasingly complex and broadening regulatory requirements. We can assist you to meet
+                    these demands by providing a timely and constructive challenge to the management, a robust and clear
+                    perspective to the audit committees, and transparent information to your stakeholders and investors.
                 </p>
-                <h4>Finsurety’s Tax Advisory Services</h4>
-                <p>At Finsurety Advisors, along with our team of experienced tax consultants take this challenge head
-                    on, by carefully examining the client’s needs and coming up with effective solutions. We provide
-                    practical and commercially focused solutions for our clients under the purview of various tax laws.
-                    Our tax services include tax advisory and regulatory services that can help you minimise your tax
-                    exposure and highlight the risks presented by constantly evolving and increasingly complex
-                    legislation.
+                <p>Our audit approach is tailored to suit the size and nature of your organization and draws upon our
+                    extensive knowledge and talent, understanding of laws, regulations and legislation. We approach your
+                    audit with a deep and broad understanding of your business, the industry in which you operate, and
+                    the latest regulatory standards, helping you deliver value confidently through transparency of your
+                    reporting to stakeholders.
                 </p>
-                <p>
-                    Whether you are an Expatriate, a Non-Resident Indian or a Resident Indian - organisation or an
-                    individual, we’re here to assist and advise you on all your tax needs.
+                <h3>
+                    Our unique approach to Audit and Assurance services
+                </h3>
+                <p>At Finsurety Advisors, we understand that an audit is not merely comparing the numbers in books with
+                    documents to confirm their veracity, it is quite extensive than it sounds, and in reality, it’s a
+                    game changing event in a company's yearly schedule.
                 </p>
-
-                    Majority of tax laws in India can be classified in 2 broad categories:
-                <ul style="padding-left: 40px">
-                    <li>
-                        Direct Tax laws and
-                    </li>
-                    <li>
-                        Indirect Tax laws
-                    </li>
+                <p>With the help of sophisticated techniques, exceptional audit tools and procedures, and experienced
+                    staff, we pride ourselves that we deliver the highest quality auditing services that there can be.
+                </p>
+                <p>We continuously engage with our clients to ensure adherence to statutory and regulatory requirements,
+                    including disclosures. And we aim to provide constructive, value-added delivery. Our auditing
+                    services help clients to realize their organizational objectives. Our tried and trusted methodology
+                    facilitates the involvement of senior personnel at regular intervals throughout the audit process;
+                    thus, ensuring value beyond our audit report’s ambit. Our satisfied clients motivate us to improve
+                    the quality of the audits that we deliver continually, and we deliver on them.
+                </p>
+                Our Audit and Assurance services include services not limited to:
+                <ul style="font-weight: bold; padding-left: 40px">
+                    <li>Statutory Audit in compliance with the Companies Act 2013
+                    <li>Tax audit as per Income Tax Act 1961
+                    <li>Internal Audit/Concurrent Audit
+                    <li>Operations and Efficiency Audit
+                    <li>Bank Audit
+                    <li>Special Investigative Audit
+                    <li>Due Diligence Review
+                    <li>Management Audit
+                    <li>Stock and fixed assets audits
+                    <li>GST Audit
                 </ul>
-                The direct tax laws in India mainly consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Income Tax Act 1961,
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBDT
-                    </li>
-                </ul>
-                The indirect tax laws in India used to contain a plethora of laws levied by both state and centre.
-                    Currently the Indirect Tax laws in India consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Goods and Services Tax Act 2017
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBIDT
-                    </li>
-                </ul>
-                <p>
-                    Apart from this, certain state Value Added Tax (VAT), The Central Excise Act 1944, and The Customs
-                    Duty Act 1962 continue to still be applied on some goods, like petrol, alcohol etc.
-                </p>
+                <br>
                 <br>
                 <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <br>
@@ -199,6 +182,8 @@ maximum-scale=1.0, user-scalable=no" />
                         <br>
                         Former Sr. Manager, EY India (Assurance)
                         <br>
+                        <br>
+
                         <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
                         <br>
                         <a href="#f">Follow on Linkedin</a>
@@ -216,6 +201,8 @@ maximum-scale=1.0, user-scalable=no" />
                         <br>
                         Former Sr. Manager, EY India (Assurance)
                         <br>
+                        <br>
+
                         <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
                         <br>
                         <a href="#f">Follow on Linkedin</a>
@@ -354,7 +341,6 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
     </div>
 </div>
-
 
 
 </body>
