--- a/corporate-finance-debt-restructuring.html
+++ b/corporate-finance-debt-restructuring.html
@@ -63,14 +63,16 @@ maximum-scale=1.0, user-scalable=no" />
 <div class="nav-ht-fix"></div>
 <div>
     <div class="main-bg">
-        <div class="bg-tax-regulatory "></div>
+        <div class="bg-corporate-finance"></div>
         <div class="centered main-text-heading">
-            Tax
-            And
-            Regulatory
+            Corporate Finance &amp;
+            <br>
+            Debt Restructuring
         </div>
     </div>
 </div>
+
+
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
@@ -123,69 +125,80 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
         <div class="col-sm-9">
             <div class="body-text-2">
-                <h2>The Dynamic Nature of Tax Laws:
-                </h2>
-                <p>
-                    Indian tax laws and their regulation in an ever changing dynamic economy are a tough area to
-                    expertise in. Given the rapid transition of our growing economy, even tax policymakers are trying to
-                    cope up with the pace by making frequent and necessary changes to the tax laws, while India climbs
-                    up the ‘ease of doing business’ charts globally.
-                </p>
-                <h4>Finsurety’s Tax Advisory Services</h4>
-                <p>At Finsurety Advisors, along with our team of experienced tax consultants take this challenge head
-                    on, by carefully examining the client’s needs and coming up with effective solutions. We provide
-                    practical and commercially focused solutions for our clients under the purview of various tax laws.
-                    Our tax services include tax advisory and regulatory services that can help you minimise your tax
-                    exposure and highlight the risks presented by constantly evolving and increasingly complex
-                    legislation.
-                </p>
-                <p>
-                    Whether you are an Expatriate, a Non-Resident Indian or a Resident Indian - organisation or an
-                    individual, we’re here to assist and advise you on all your tax needs.
-                </p>
+                <h2>Debt Syndication & Corporate Finance - The Best Way Forward </h2>
+                <br><h4>
+                Debt Raising & Restructuring
 
-                    Majority of tax laws in India can be classified in 2 broad categories:
-                <ul style="padding-left: 40px">
-                    <li>
-                        Direct Tax laws and
-                    </li>
-                    <li>
-                        Indirect Tax laws
-                    </li>
-                </ul>
-                The direct tax laws in India mainly consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Income Tax Act 1961,
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBDT
-                    </li>
-                </ul>
-                The indirect tax laws in India used to contain a plethora of laws levied by both state and centre.
-                    Currently the Indirect Tax laws in India consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Goods and Services Tax Act 2017
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBIDT
-                    </li>
-                </ul>
+            </h4>
                 <p>
-                    Apart from this, certain state Value Added Tax (VAT), The Central Excise Act 1944, and The Customs
-                    Duty Act 1962 continue to still be applied on some goods, like petrol, alcohol etc.
+                    The current approach adopted by various businesses to raise and manage loans is majorly through
+                    direct communication with the banks. However, this doesn’t always work in favour of the borrower to
+                    get the best rates of interest, repayment terms or moratorium periods.
+
                 </p>
-                <br>
+                <h4>
+                    How can we help in Debt Raising & Restructuring ? </h4>
+                <p>
+
+                    At Finsurety Advisors, having successfully raised and restructured debts of over 800 crores, we
+                    provide our clients with an end to end solution for raising and structuring of different types of
+                    loans including project loans, equipment financing, SME financing etc based on the client’s needs by
+                    considering factors such as future cash flows, suitable interest rates, risk mapping, repayment
+                    schedules just to name a few.
+
+                </p>
+                Our services in debt raising and restructuring include services not limited to:
+                <b>
+                    <ul style="padding-left: 40px">
+                        <li>Raising Loans at best interest rates available
+                        <li>Takeover and Restructuring of existing debt
+                        <li>Credit Ratings
+                        <li>Preparation of detailed project reports
+                        <li>Managing repayments and exit strategies
+                        <li>Capital Structure Management
+                        <li>Management Information Systems
+                        <li>Debt advisory
+                        <li>Services to underperforming and financially distressed businesses
+                        <li>Advice to lenders, stakeholders and advisors
+
+                    </ul>
+                </b>
+                <h4>
+                    Corporate Finance </h4>
+                <p>
+
+                    Every decision made in a business has financial implications, and any decision that involves the use
+                    of money is a corporate financial decision. In today's challenging corporate, regulatory, legal and
+                    accounting environment, there is a need for robust and independent corporate financial decisions.
+                </p>
+                <p>
+                    Through the course of business, organisations are required to deal with complex decisions relating
+                    to investments, funding and capital structures. Companies often rely on experienced advisors to
+                    guide them through the process of decision making. This includes companies that could be either in
+                    the early stage, the growth stage or the matured stage of the life cycle.
+
+                </p>
+                <h4>
+                    How can we help in Corporate Finance ?
+                </h4>
+                <p>
+                    At Finsurety Advisors, we provide in-depth analysis of the market, evaluate the alternatives, and
+                    propose financial and strategic solutions. We focus on various aspects such as market pricing,
+                    timing, transaction structure. We advise clients on various intricate and structured decisions at
+                    different stages and provide robust and bespoke solutions in a variety of situations such as
+                    mergers, acquisitions, divestment, joint ventures and capital raising.
+                </p>
+                <p>
+                    We offer services across debt restructuring, corporate structuring solutions, business restructuring
+                    advice, inbound and outbound investment structuring and more.
+
+                </p><br><br>
                 <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <br>
+                <br>
                 <h4>Reporting Partners</h4>
+                <br>
+                <br>
                 <div class="row">
                     <div class="col-sm-4">
                         <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
@@ -199,6 +212,8 @@ maximum-scale=1.0, user-scalable=no" />
                         <br>
                         Former Sr. Manager, EY India (Assurance)
                         <br>
+                        <br>
+
                         <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
                         <br>
                         <a href="#f">Follow on Linkedin</a>
@@ -216,6 +231,8 @@ maximum-scale=1.0, user-scalable=no" />
                         <br>
                         Former Sr. Manager, EY India (Assurance)
                         <br>
+                        <br>
+
                         <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
                         <br>
                         <a href="#f">Follow on Linkedin</a>
