--- a/direct-tax.html
+++ b/direct-tax.html
@@ -63,11 +63,9 @@ maximum-scale=1.0, user-scalable=no" />
 <div class="nav-ht-fix"></div>
 <div>
     <div class="main-bg">
-        <div class="bg-tax-regulatory "></div>
+        <div class="bg-direct-tax"></div>
         <div class="centered main-text-heading">
-            Tax
-            And
-            Regulatory
+            Direct Tax
         </div>
     </div>
 </div>
@@ -123,66 +121,112 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
         <div class="col-sm-9">
             <div class="body-text-2">
-                <h2>The Dynamic Nature of Tax Laws:
+                <h2>Direct Taxes - Regulations & Compliances
                 </h2>
                 <p>
-                    Indian tax laws and their regulation in an ever changing dynamic economy are a tough area to
-                    expertise in. Given the rapid transition of our growing economy, even tax policymakers are trying to
-                    cope up with the pace by making frequent and necessary changes to the tax laws, while India climbs
-                    up the ‘ease of doing business’ charts globally.
+                    The wide scope of the Income Tax Act 1961 still governs the flow of direct tax in India, along with
+                    the various amendments, circulars and clarifications issued from time to time by CBDT(Central Board
+                    of Direct Taxes)
                 </p>
-                <h4>Finsurety’s Tax Advisory Services</h4>
-                <p>At Finsurety Advisors, along with our team of experienced tax consultants take this challenge head
-                    on, by carefully examining the client’s needs and coming up with effective solutions. We provide
-                    practical and commercially focused solutions for our clients under the purview of various tax laws.
-                    Our tax services include tax advisory and regulatory services that can help you minimise your tax
-                    exposure and highlight the risks presented by constantly evolving and increasingly complex
-                    legislation.
-                </p>
-                <p>
-                    Whether you are an Expatriate, a Non-Resident Indian or a Resident Indian - organisation or an
-                    individual, we’re here to assist and advise you on all your tax needs.
-                </p>
+                <h3>Finsurety’s Tax Advisory Services
+                </h3>
+                At Finsurety Advisors, along with our team of experienced tax experts we assist businesses and
+                individuals on various tax and regulatory matters at every stage of their income lifecycle, thereby
+                assisting them in tax planning and mitigating the tax burden by ensuring that they derive all the tax
+                benefits available under the tax laws. We offer our direct tax services in the following categories:
+                <b>
+                    <ul style="padding-left: 40px">
+                        <li>
+                            Corporate Tax
 
-                    Majority of tax laws in India can be classified in 2 broad categories:
-                <ul style="padding-left: 40px">
-                    <li>
-                        Direct Tax laws and
-                    </li>
-                    <li>
-                        Indirect Tax laws
-                    </li>
-                </ul>
-                The direct tax laws in India mainly consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Income Tax Act 1961,
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBDT
-                    </li>
-                </ul>
-                The indirect tax laws in India used to contain a plethora of laws levied by both state and centre.
-                    Currently the Indirect Tax laws in India consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Goods and Services Tax Act 2017
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBIDT
-                    </li>
-                </ul>
-                <p>
-                    Apart from this, certain state Value Added Tax (VAT), The Central Excise Act 1944, and The Customs
-                    Duty Act 1962 continue to still be applied on some goods, like petrol, alcohol etc.
+                        </li>
+                        <li>
+                            Personal Tax
+
+                        </li>
+                        <li>
+                            International Tax
+
+                        </li>
+                        <li>
+                            Expatriate Tax
+
+                        </li>
+                    </ul>
+                </b>
+                <h4>Corporate Tax</h4>
+                Tax planning plays an important part in corporate taxation and our primary objective is to help mitigate
+                the burden of taxation within the confines of the law for our clients. Our wide understanding of the
+                laws that affect the corporates in India helps us to provide solutions by offering these services:
+                <i>
+                    <ul style="padding-left: 40px">
+                        <li>Statutory compliance support
+                        <li> Preparation and filing of corporate tax returns
+                        <li> Tax diagnostic reviews to identify uncertain tax positions and ensure risk mitigation
+                        <li>Preparation and filing of withholding tax returns
+                        <li>Preparation and filing of overseas entity tax returns in India
+                        <li> Tax advice and optimisation on various transactions such as EPC contracts, turnkey
+                            contracts, etc. for Government & Non Government organisations
+                        <li> Review of applicability of ICDS and related disclosures
+                        <li>Review of Ind-AS applicability and related action points
+                        <li>Review and applicability of POEM
+
+                    </ul>
+                </i>
+                <h4>Personal Tax</h4>
+                <p>We can help you explore your tax-saving opportunities and develop your tax planning strategy under
+                    the confines of the law. Drawing on multidisciplinary expertise, we provide you with customized
+                    guidance to fit your situation so that your tax strategy works in concern with other components of
+                    your financial framework and lifestyle.</p>
+
+                <p>For business owners and executives, we also help you evaluate the tax consequences of your business
+                    and personal decisions, providing integrated guidance to retain more of your hard-earned wealth.
                 </p>
-                <br>
+                We offer the following services in personal tax:
+                <i>
+                    <ul style="padding-left: 40px">
+                        <li>Filing of annual tax returns
+                        <li> Filing of Advance Tax returns
+                        <li> Tax planning and strategies
+                        <li> Tax representation before Assessing Officer and other tax authorities
+                        <li> Advisory on litigation strategy and its implementation
+                    </ul>
+                </i>
+                <h4>International Tax</h4>
+                <p>As businesses operate globally, it is imperative for us to understand the evolving global tax laws
+                    across countries, not only to ensure compliance but also factor in the significant cost of doing
+                    business in that country. We offer services that successfully align all the different areas of
+                    taxation into a benefit-driven strategy that is reflected favorably in the various financial
+                    parameters.
+                </p>
+                We offer the following services in international tax:
+                <i>
+                    <ul style="padding-left: 40px">
+                        <li>Advice on cross border transactions
+                        <li>Advice on double tax treaties and foreign tax systems/implications
+                        <li>Tax efficient structuring of cross border transactions
+                        <li>Services in relation to the improvement/effectiveness of the cross border supply chain
+                        <li>International tax dispute resolution
+                    </ul>
+                </i>
+                <h4>
+                    Expatriate taxation
+
+                </h4>
+                <p>Our experienced team provides return filing, advisory, tax compliance, and business tax planning
+                    services to expatriates working in India, their family offices, investment funds and individuals
+                    involved in commercial transactions.
+
+                <p>We also cater to clients who have expatriates as their employees, given how the tax treatment of
+                    those is different from other Indian working populations. With the businesses going global, people
+                    and capital are crossing borders more often than ever before, which brings them closer to the reach
+                    of tax authorities and legal enforcement.
+
+                <p>Having an advisor that offers a complete range of financial and tax services in the jurisdictions
+                    where you have private and business connections is instrumental. In this direction, we aim to
+                    provide more than just advice – we recommend solutions and help clients implement them.
+
+                    <br>
                 <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <br>
                 <h4>Reporting Partners</h4>
