--- a/financial-accounting.html
+++ b/financial-accounting.html
@@ -60,28 +60,28 @@ maximum-scale=1.0, user-scalable=no" />
     </div>
     </div>
 </section>
-<div class="nav-ht-fix"></div>
-<div>
-    <div class="main-bg">
-        <div class="bg-tax-regulatory "></div>
-        <div class="centered main-text-heading">
-            Tax
-            And
-            Regulatory
-        </div>
+<div class="nav-ht-fix"> </div>
+<div class="main-bg">
+    <div class="bg-financial-accounting"></div>
+    <div class="centered main-text-heading">
+        Financial Accounting <br>
+        &amp; Advisory
+
     </div>
 </div>
+
+
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
             <div class="sidebar-item ">
                 <div class="make-me-sticky">
-                    <div style="padding: 10px 20px 20px 10px">
+                    <div  style="padding: 10px 20px 20px 10px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
-                            <li><a href="#f"> Process Improvement & Risk advisory </a></li>
+                            <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
                             <br>
-                            <li><a href="#f">Auditing and Assurance</a></li>
+                            <li> <a href="#f">Auditing and Assurance</a></li>
                             <br>
                             <li><a href="#f">Tax and regulatory</a></li>
                             <br>
@@ -123,69 +123,35 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
         <div class="col-sm-9">
             <div class="body-text-2">
-                <h2>The Dynamic Nature of Tax Laws:
-                </h2>
-                <p>
-                    Indian tax laws and their regulation in an ever changing dynamic economy are a tough area to
-                    expertise in. Given the rapid transition of our growing economy, even tax policymakers are trying to
-                    cope up with the pace by making frequent and necessary changes to the tax laws, while India climbs
-                    up the ‘ease of doing business’ charts globally.
+<p>
+    Financial statements are the ultimate report card of a company’s fiscal performance. They enable owners and managers to pursue their business objectives, whether they are raising capital, doing acquisitions or planning divestment or restructuring. Therefore, every business activity, through the company’s lifecycle, impacts the financial statements and hence needs to be carefully examined and analysed at each step.
+</p>
+                <h3>
+                    Our Specialised Financial Accounting Services
+                </h3>
+                <p>At Finsurety Advisors, we possess the necessary expertise and relevant resources to provide cost-effective and high-quality financial accounting services. We help companies prepare for any new accounting changes and help implement them.
                 </p>
-                <h4>Finsurety’s Tax Advisory Services</h4>
-                <p>At Finsurety Advisors, along with our team of experienced tax consultants take this challenge head
-                    on, by carefully examining the client’s needs and coming up with effective solutions. We provide
-                    practical and commercially focused solutions for our clients under the purview of various tax laws.
-                    Our tax services include tax advisory and regulatory services that can help you minimise your tax
-                    exposure and highlight the risks presented by constantly evolving and increasingly complex
-                    legislation.
+                <p>Companies in India are transitioning to Ind AS in a phase wise manner hence there are bound to be reporting challenges for companies. Our team of professionals takes the pressure away from in-house finance teams by preparing a set of compliant financial statements.
                 </p>
-                <p>
-                    Whether you are an Expatriate, a Non-Resident Indian or a Resident Indian - organisation or an
-                    individual, we’re here to assist and advise you on all your tax needs.
-                </p>
+                We provide assistance on a wide variety of accounting processes, including but not limited to:
+<ul style="padding-left: 40px; font-weight: bold">
+    <li>Bookkeeping services
+    <li>Accounts receivable and payable
+    <li>Payroll processing
+    <li>Statutory compliances like TDS, GST, Advance Tax etc
+    <li>Accounting supervision and controls.
+    <li>Preparation of financial statements and annual reports
+    <li>Helping in the transition to Ind AS & meeting reporting requirements
 
-                    Majority of tax laws in India can be classified in 2 broad categories:
-                <ul style="padding-left: 40px">
-                    <li>
-                        Direct Tax laws and
-                    </li>
-                    <li>
-                        Indirect Tax laws
-                    </li>
-                </ul>
-                The direct tax laws in India mainly consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Income Tax Act 1961,
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBDT
-                    </li>
-                </ul>
-                The indirect tax laws in India used to contain a plethora of laws levied by both state and centre.
-                    Currently the Indirect Tax laws in India consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Goods and Services Tax Act 2017
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBIDT
-                    </li>
-                </ul>
-                <p>
-                    Apart from this, certain state Value Added Tax (VAT), The Central Excise Act 1944, and The Customs
-                    Duty Act 1962 continue to still be applied on some goods, like petrol, alcohol etc.
-                </p>
+</ul>
+                <br>
                 <br>
                 <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <br>
+                <br>
                 <h4>Reporting Partners</h4>
+                <br>
+                <br>
                 <div class="row">
                     <div class="col-sm-4">
                         <img src="https://image.shutterstock.com/image-vector/businessman-icon-260nw-561625345.jpg">
@@ -199,6 +165,8 @@ maximum-scale=1.0, user-scalable=no" />
                         <br>
                         Former Sr. Manager, EY India (Assurance)
                         <br>
+                        <br>
+
                         <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
                         <br>
                         <a href="#f">Follow on Linkedin</a>
@@ -216,6 +184,8 @@ maximum-scale=1.0, user-scalable=no" />
                         <br>
                         Former Sr. Manager, EY India (Assurance)
                         <br>
+                        <br>
+
                         <a href="mailto:nitish.mittal@coinmen.in">nitish.mittal@coinmen.in</a>
                         <br>
                         <a href="#f">Follow on Linkedin</a>
