--- a/indirect-tax.html
+++ b/indirect-tax.html
@@ -63,11 +63,9 @@ maximum-scale=1.0, user-scalable=no" />
 <div class="nav-ht-fix"></div>
 <div>
     <div class="main-bg">
-        <div class="bg-tax-regulatory "></div>
+        <div class="bg-indirect-tax "></div>
         <div class="centered main-text-heading">
-            Tax
-            And
-            Regulatory
+            Indirect Tax
         </div>
     </div>
 </div>
@@ -123,65 +121,71 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
         <div class="col-sm-9">
             <div class="body-text-2">
-                <h2>The Dynamic Nature of Tax Laws:
+                <h2>Indirect Taxes - Regulations & Compliances
                 </h2>
                 <p>
-                    Indian tax laws and their regulation in an ever changing dynamic economy are a tough area to
-                    expertise in. Given the rapid transition of our growing economy, even tax policymakers are trying to
-                    cope up with the pace by making frequent and necessary changes to the tax laws, while India climbs
-                    up the ‘ease of doing business’ charts globally.
+                    GST is a transaction tax that subsumes most of the legacy indirect taxes levied by the Centre and
+                    States.This reform has called for a significant realignment of operations including supply chain and
+                    logistics, pricing, procurements, accounting, and Information Technology (IT) systems.
                 </p>
-                <h4>Finsurety’s Tax Advisory Services</h4>
-                <p>At Finsurety Advisors, along with our team of experienced tax consultants take this challenge head
-                    on, by carefully examining the client’s needs and coming up with effective solutions. We provide
-                    practical and commercially focused solutions for our clients under the purview of various tax laws.
-                    Our tax services include tax advisory and regulatory services that can help you minimise your tax
-                    exposure and highlight the risks presented by constantly evolving and increasingly complex
-                    legislation.
+                <p>As India is a federal country, there is a dual GST with a four rate structure to meet the interests
+                    of various states. Given that the government is extremely proactive in addressing the transition
+                    challenges faced by trade and industry, a number of exemptions and concessions find place in the
+                    evolving GST system, but so do a number of challenges owing to the change in the initial years of
+                    its inception.
                 </p>
-                <p>
-                    Whether you are an Expatriate, a Non-Resident Indian or a Resident Indian - organisation or an
-                    individual, we’re here to assist and advise you on all your tax needs.
+                <p>A reform of this magnitude takes time to settle down in the overall system as the compliance and
+                    legislative processes require continuous amendments to weed-out difficulties. Thus requiring
+                    businesses to continuously adapt to the additional requirements necessitated by these amendments.
                 </p>
 
-                    Majority of tax laws in India can be classified in 2 broad categories:
-                <ul style="padding-left: 40px">
-                    <li>
-                        Direct Tax laws and
-                    </li>
-                    <li>
-                        Indirect Tax laws
-                    </li>
-                </ul>
-                The direct tax laws in India mainly consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Income Tax Act 1961,
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBDT
-                    </li>
-                </ul>
-                The indirect tax laws in India used to contain a plethora of laws levied by both state and centre.
-                    Currently the Indirect Tax laws in India consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Goods and Services Tax Act 2017
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBIDT
-                    </li>
-                </ul>
-                <p>
-                    Apart from this, certain state Value Added Tax (VAT), The Central Excise Act 1944, and The Customs
-                    Duty Act 1962 continue to still be applied on some goods, like petrol, alcohol etc.
+                <h3>How does Finsurety address your GST concerns ?
+                </h3>
+                <p> At Finsurety Advisors, we stay abreast of all the developments on tax policies, administration and
+                    key judicial pronouncements, thereby identifying threats and opportunities for providing innovative
+                    tax solutions to our clients.
                 </p>
+                We are a one stop solution for GST compliance which includes:
+
+                <b>
+                    <ul style="padding-left: 40px">
+                        <li>
+                            GST Registration & Return filings
+                        </li>
+                        <li>
+                            Preparation of Replies to notices and Representation before tax authorities
+
+                        </li>
+                        <li>
+                            GST Refunds
+
+                        </li>
+                        <li>
+                            GST statutory audit and
+                        </li>
+                        <li>GST review / GST internal audit.</li>
+                    </ul>
+                </b>
+                <p>
+                    We offer all India GST compliances including but not limited to GST registration, obtaining GSTIN,
+                    filing of monthly and annual reports, data analysis vis-à-vis GST transactions, total tax liability
+                    calculation and monthly MIS of indirect tax compliance. We also review your GST structure by
+                    reviewing the taxability of your business transactions, documentation, ITC compliances,
+                    applicability of rates, and other compliance procedures.
+                </p>
+                <p>
+                    Under the GST statutory audit, we review data, returns, and systems vis-à-vis tax laws. We also
+                    prepare reconciliations as required under GSTR9 and perform audits as per GSTR 9C along with the
+                    finalisation of observations and review of tax computations.
+
+                </p>
+                <h3>
+                    Other Indirect Taxes
+                </h3>
+                We also handle the preparation and drafting of replies against notices received under various tax laws
+                like Customs, Excise & VAT along with representation before the tax authorities at different
+                hierarchies.
+                <br>
                 <br>
                 <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <br>
