--- a/statutory-audit.html
+++ b/statutory-audit.html
@@ -27,47 +27,45 @@ maximum-scale=1.0, user-scalable=no" />
   margin-right: auto;"></a>
     </div>
     <div class="nav-container ">
-    <div class="nav-links">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Services</a>
-                <ul class="dropdown-1">
-                    <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a></li>
-                    <li><a href="auditing-and-assurance.html">Auditing & Assurance</a><ul class="dropdown-2">
-                        <li><a href="statutory-audit.html">Statutory Audit</a></li>
-                        <li><a href="#">Internal Audit</a></li>
-                    </ul></li>
-                    <li><a href="tax-and-regulatory.html">Tax & Regulatory</a>
-                        <ul class="dropdown-2">
-                            <li><a href="direct-tax.html">Direct Tax</a></li>
-                            <li><a href="indirect-tax.html">Indirect Tax</a></li>
+        <div class="nav-links">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Services</a>
+                    <ul class="dropdown-1">
+                        <li><a href="process-improvement-risk-advisory.html">Process Improvement & Risk Advisory</a></li>
+                        <li><a href="auditing-and-assurance.html">Auditing & Assurance</a><ul class="dropdown-2">
+                            <li><a href="statutory-audit.html">Statutory Audit</a></li>
+                            <li><a href="#">Internal Audit</a></li>
                         </ul></li>
-                    <li><a href="#">Company Secretarial</a></li>
-                    <li><a href="corporate-finance-debt-restructuring.html">Corporate Finance</a></li>
-                    <li><a href="financial-accounting.html">Financial Accounting</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Sectors</a></li>
-            <li><a href="#">Finsurety</a>
-                <ul class="dropdown-1">
-                    <li><a href="#">The Firm & Partners</a></li>
-                    <li><a href="#">Board of Advisors & Finsurety Team</a></li>
-                </ul></li>
-            <li><a href="#">News Letter & Articles
-            </a></li>
-            <li><a href="#">Contact Us</a></li>
-        </ul>
-    </div>
+                        <li><a href="tax-and-regulatory.html">Tax & Regulatory</a>
+                            <ul class="dropdown-2">
+                                <li><a href="direct-tax.html">Direct Tax</a></li>
+                                <li><a href="indirect-tax.html">Indirect Tax</a></li>
+                            </ul></li>
+                        <li><a href="#">Company Secretarial</a></li>
+                        <li><a href="corporate-finance-debt-restructuring.html">Corporate Finance</a></li>
+                        <li><a href="financial-accounting.html">Financial Accounting</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Sectors</a></li>
+                <li><a href="#">Finsurety</a>
+                    <ul class="dropdown-1">
+                        <li><a href="#">The Firm & Partners</a></li>
+                        <li><a href="#">Board of Advisors & Finsurety Team</a></li>
+                    </ul></li>
+                <li><a href="#">News Letter & Articles
+                </a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
     </div>
 </section>
 <div class="nav-ht-fix"></div>
 <div>
     <div class="main-bg">
-        <div class="bg-tax-regulatory "></div>
+        <div class="bg-direct-tax"></div>
         <div class="centered main-text-heading">
-            Tax
-            And
-            Regulatory
+            Direct Tax
         </div>
     </div>
 </div>
@@ -123,65 +121,28 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
         <div class="col-sm-9">
             <div class="body-text-2">
-                <h2>The Dynamic Nature of Tax Laws:
-                </h2>
-                <p>
-                    Indian tax laws and their regulation in an ever changing dynamic economy are a tough area to
-                    expertise in. Given the rapid transition of our growing economy, even tax policymakers are trying to
-                    cope up with the pace by making frequent and necessary changes to the tax laws, while India climbs
-                    up the ‘ease of doing business’ charts globally.
-                </p>
-                <h4>Finsurety’s Tax Advisory Services</h4>
-                <p>At Finsurety Advisors, along with our team of experienced tax consultants take this challenge head
-                    on, by carefully examining the client’s needs and coming up with effective solutions. We provide
-                    practical and commercially focused solutions for our clients under the purview of various tax laws.
-                    Our tax services include tax advisory and regulatory services that can help you minimise your tax
-                    exposure and highlight the risks presented by constantly evolving and increasingly complex
-                    legislation.
-                </p>
-                <p>
-                    Whether you are an Expatriate, a Non-Resident Indian or a Resident Indian - organisation or an
-                    individual, we’re here to assist and advise you on all your tax needs.
-                </p>
+                <h2>Our approach to carrying out a Statutory Audit and/or Tax Audit</h2>
 
-                    Majority of tax laws in India can be classified in 2 broad categories:
-                <ul style="padding-left: 40px">
-                    <li>
-                        Direct Tax laws and
-                    </li>
-                    <li>
-                        Indirect Tax laws
-                    </li>
-                </ul>
-                The direct tax laws in India mainly consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Income Tax Act 1961,
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBDT
-                    </li>
-                </ul>
-                The indirect tax laws in India used to contain a plethora of laws levied by both state and centre.
-                    Currently the Indirect Tax laws in India consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Goods and Services Tax Act 2017
-                    </li>
-                    <li>
-                        Subsequent amendments made to it,
-                    </li>
-                    <li>
-                        Rules and circulars issued by CBIDT
-                    </li>
-                </ul>
-                <p>
-                    Apart from this, certain state Value Added Tax (VAT), The Central Excise Act 1944, and The Customs
-                    Duty Act 1962 continue to still be applied on some goods, like petrol, alcohol etc.
+                <p>The auditing sector has been under tremendous scrutiny recently, with the government calling for reform following the collapse of high-profile firms whose audits have been called into question. Clearly it's vital that auditors recognise and report on any issues that emerge from the auditing process, so that any problems in the business can be addressed.
                 </p>
+                <p>A statutory audit is key to sustaining confidence in both your company and the financial system at large. It must keep pace with a fast-evolving corporate reporting environment – one characterised by investor scepticism and the 24/7 scrutiny of corporate information including non-financial information, while also meeting investor expectations with the completeness, accuracy and fair presentation of information in your financial statements and disclosures.
+                </p>
+                <p>At Finsurety Advisors, we work hard to provide an exceptional audit service, developing a deep understanding of individual businesses and offering proactive advice and insight that goes beyond the basic requirements while also meeting the timelines.
+                </p>
+                <p>With our team of professionals, who have a deep understanding of the requirements and reporting requirements under the Companies Act, 2013, The Income Tax Act, 1961 just to name a few, we ensure that the audits are performed with utmost professionalism while covering all the aspects as required by the said laws.
+                </p>
+                Our aim is to have as minimal impact as possible on the client’s day-to-day business, while maintaining a thorough approach that includes:
+<ul style="font-weight: bold;padding-left: 40px">
+                <li>Inspecting documents
+    <li>Re-performing calculations
+    <li>Sending questionnaires, surveys, checklists
+    <li>Reviewing and reporting on controls and systems
+    <li>Timely filing of various Forms & Returns
+</ul>
+
+                <p>Ultimately, this is a positive process that helps ensure best practice and future growth of an organisation.</p>
+
+
                 <br>
                 <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <br>
